# carla_ros2_manual_control

./: main.py  package.xml  setup.cfg  setup.py  stack.json
carla_simulation/: manual_control.py  vehicle_info_publisher.py
config/: vehicle_config.json
