<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_simulation</name>
  <version>0.0.0</version>
  <description>Publish sensor info of carla simulated vehicle in required format</description>
  <maintainer email="runqi_qiu@outlook.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>sensor_driver_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
